WIP. Small fixes after unsuccessful postprocessing of Berlin